--- a/lasagna.html
+++ b/lasagna.html
@@ -31,3 +31,23 @@
     </ol>
 </body>
 </html>
+
+<style>
+    body {
+        background-color: rgba(210, 42, 23, 0.798);
+        color: white;
+        margin: 5px
+    }
+
+    h1, h2 {
+        padding: 5px
+    }
+
+    h2 {
+        text-align: center;
+    }
+
+    li {
+        padding: 3px
+    }
+</style>
